# Wavetable-Synth-VST

./: CMakeLists.txt  LICENSE  README.md  WavetableSynth.filtergraph  WavetableSynth.jucer
JuceLibraryCode/: JucePluginDefines.h
Source/: PluginProcessor.cpp  PluginProcessor.h  WavetableOscillator.cpp  WavetableOscillator.h  WavetableSynth.cpp  WavetableSynth.h
plugin/: CMakeLists.txt
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
